--- a/client/src/components/PledgePage/style.css
+++ b/client/src/components/PledgePage/style.css
@@ -1,8 +1,8 @@
-.loading-details{
+.loading-spinner__details{
 	margin: 30%;
 	position: relative;
 }
-.loading{
+.loading-spinner{
 	margin-top: 52%;
 	color: #1dbfd1;
 	margin-left: 40%;
@@ -13,6 +13,7 @@
 .top-info{
   position: relative;
   width:80vw;
+  z-index: 1;
 }
 .top-info__img{
   width: 100vw;
